[project]
name = "trial-observatory-streamlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyalex>=0.21",
    "python-dotenv>=1.2.1",
    "streamlit>=1.50.0",
]

[dependency-groups]
dev = [
    "trial-observatory-streamlit",
]

[tool.uv.sources]
trial-observatory-streamlit = { workspace = true, editable = true }
