[project]
name = "trial-observatory-streamlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyalex>=0.21",
    "python-dotenv>=1.2.1",
    "streamlit>=1.50.0",
]


[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ['src']
include = ['trial_observatory*']

[tool.uv.sources]
trial_observatory_streamlit = { workspace = true }

[dependency-groups]
dev = [
    "trial_observatory_streamlit",
]

[tool.pytest.ini_options]
pythonpath="src"